Service page update

--- a/serwis.html
+++ b/serwis.html
@@ -6,7 +6,7 @@
     <title>Serwis — Monitory medyczne</title>
     <link rel="stylesheet" href="public/css/styles.css" />
 </head>
-<body class="bg-light">
+<body>
 
 <!-- Navbar (reuse your existing navbar) -->
 <nav class="navbar navbar-expand-lg navbar-light border-bottom">
@@ -54,8 +54,8 @@
             Serwis
         </span>
         <h1 class="display-5 fw-bold mt-2">Servis</h1>
-        <h5 class="display-4 fw-bold mt-2">Zgłoś reklamację lub<br/>serwis sprzętu</h5>
-        <p class="serwis-hero__lead mt-3">
+        <h5 class="display-4 fw-bold mt-4">Zgłoś reklamację lub<br/>serwis sprzętu</h5>
+        <p class="serwis-hero__lead mt-4">
             At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
         </p>
     </div>
@@ -63,10 +63,9 @@
 
 <!-- Service Form -->
 <main class="serwis-form container px-5 py-5">
-    <h2 class="fw-bold mb-4 text-center">Wypełnij formularz</h2>
-
+    <h2 class="fw-bold mb-4 text-center section-title">Wypełnij formularz</h2>
     <!-- Section 1 -->
-    <div class="row align-items-start mb-5">
+    <div class="row align-items-start mb-5 ">
         <div class="col-md-8">
             <h5 class="fw-semibold mb-3">1. Dane osobowe</h5>
         </div>
