--- a/about.html
+++ b/about.html
@@ -11,22 +11,18 @@
 <body>
 
 <!-- 1) Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light border-bottom">
-    <div class="container-fluid">
-        <!-- 1) Logo flush left -->
-        <a class="navbar-brand me-auto" href="#">
-            <img src="./public/icons/logo.svg" alt="Logo">
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent position-relative py-3">
+    <div class="container-fluid px-5">
+
+        <!-- Logo flush left -->
+        <a class="navbar-brand me-auto me-lg-5 pe-5" href="#">
+            <img src="public/icons/logo.svg" alt="iQrad Logo" class="navbar-logo">
         </a>
 
-        <!-- toggler stays -->
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mainNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- 2) Centered menu -->
-        <div id="mainNav" class="collapse navbar-collapse justify-content-center">
-            <ul class="navbar-nav align-items-center">
-                <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
+        <!-- Centered menu -->
+        <div class="d-flex justify-content-center">
+            <ul class="navbar-nav d-flex flex-row flex-nowrap gap-4">
+                <li class="nav-item"><a class="nav-link text-nowrap active" href="#">O nas</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Oferta</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Katalogi</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
@@ -35,23 +31,25 @@
             </ul>
         </div>
 
-        <!-- 3) Phone flush right -->
-        <div class="d-flex align-items-center ms-auto">
-            <a
-                    class="btn d-inline-flex align-items-center flex-nowrap"
-                    href="tel:+486506468569"
-            >
-                <img src="./public/icons/contact-phone.svg" alt="" class="me-1">
-                +48 650 468 569
+        <!-- Phone + Language -->
+        <div class="d-flex align-items-center ms-auto gap-4 ms-lg-5 me-lg-5">
+            <a class="contact-btn d-flex align-items-center" href="tel:+48650468569">
+                <img src="public/icons/contact-phone.svg" alt="Phone" class="me-2 contact-icon">
+                <span class="contact-text">+48 650 468 569</span>
             </a>
+            <div class="language-pill">PL</div>
         </div>
     </div>
 </nav>
+
 
 <!-- 2) Hero Banner -->
 <section class="hero-section position-relative">
     <div class="overlay position-absolute top-0 start-0 w-100 h-100"></div>
     <div class="hero-content text-white" style="z-index:1;">
+       <span class="badge bg-danger fs-7 rounded-pill px-4 py-2">
+            Oferta
+        </span>
         <h1 class="display-4 fw-bold mb-3">Lorem ipsum<br>dolor sit empresivala</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
     </div>
