Navbar and About section updates

--- a/about.html
+++ b/about.html
@@ -15,24 +15,22 @@
     <div class="container-fluid px-5">
 
         <!-- Logo flush left -->
-        <a class="navbar-brand me-auto me-lg-5 pe-5" href="#">
+        <a class="navbar-brand ms-lg-5 pe-0" href="#">
             <img src="public/icons/logo.svg" alt="iQrad Logo" class="navbar-logo">
         </a>
 
         <!-- Centered menu -->
-        <div class="d-flex justify-content-center">
-            <ul class="navbar-nav d-flex flex-row flex-nowrap gap-4">
-                <li class="nav-item"><a class="nav-link text-nowrap active" href="#">O nas</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Oferta</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Katalogi</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Serwis</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
-            </ul>
-        </div>
+        <ul class="navbar-nav d-flex flex-row flex-nowrap gap-4 mx-auto">
+            <li class="nav-item"><a class="nav-link text-nowrap active" href="#">O nas</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#">Oferta</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#">Katalogi</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#">FAQ</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#">Serwis</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#">Kontakt</a></li>
+        </ul>
 
         <!-- Phone + Language -->
-        <div class="d-flex align-items-center ms-auto gap-4 ms-lg-5 me-lg-5">
+        <div class="d-flex align-items-center gap-4 me-lg-5">
             <a class="contact-btn d-flex align-items-center" href="tel:+48650468569">
                 <img src="public/icons/contact-phone.svg" alt="Phone" class="me-2 contact-icon">
                 <span class="contact-text">+48 650 468 569</span>
@@ -50,8 +48,12 @@
        <span class="badge bg-danger fs-7 rounded-pill px-4 py-2">
             Oferta
         </span>
-        <h1 class="display-4 fw-bold mb-3">Lorem ipsum<br>dolor sit empresivala</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+        <h1 class="display-4 fw-bold mb-3">Lorem ipsum dolor sit empresival</h1>
+        <p class="lead">
+            inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        </p>
     </div>
 </section>
 
